<resources>
    <string name="app_name">Criminallntention</string>
    <string name="crime_title_hint">Enter a title of crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_solve_label">Solve</string>
    <string name="date_picker_title">Pick Date</string>
    <string name="new_crime">New crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="show_test_1">Test1</string>


   <plurals name="subtitle_format" >
       <item quantity="one">%d Crime</item>
       <item quantity="other">%d Crimes</item>
   </plurals>

    <string name="hide_subtitle">hide subtitle</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_crime_report">Send Crime Report</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_susspect">There is no suspect.</string>
    <string name="crime_report_with_susspect">The suspect is %s.</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="Call_suspect">Call suspect</string>
    <string name="add_to_list">Add To List</string>
    <string name="delete">delete_crime</string>
    <string name="denied_permission_to_call">Permission request to call is denied</string>


</resources>
